|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2017, PHP 7.1.4

- Core:
  . Fixed bug #74149 (static embed SAPI linkage error). (krakjoe)
  . Fixed bug #73370 (falsely exits with "Out of Memory" when using
    USE_ZEND_ALLOC=0). (Nikita)
  . Fixed bug #73960 (Leak with instance method calling static method with
    referenced return). (Nikita)

- Date:
  . Fixed bug #72096 (Swatch time value incorrect for dates before 1970). (mcq8)

- DOM:
  . Fixed bug #74004 (LIBXML_NOWARNING flag ingnored on loadHTML*).
    (somedaysummer)

- OpenSSL:
  . Fixed bug #72333 (fwrite() on non-blocking SSL sockets doesn't work).
    (Jakub Zelenka)

- PDO MySQL:
  . Fixed bug #71003 (Expose MYSQLI_CLIENT_SSL_DONT_VERIFY_SERVER_CERT to PDO
    interface). (Thomas Orozco)

- SPL:
  . Fixed bug #74058 (ArrayObject can not notice changes). (Andrew Nester)

- Sqlite:
  . Implemented FR #74217 (Allow creation of deterministic sqlite functions).
    (Andrew Nester)

- Streams:
  . Fixed bug #74216 (Correctly fail on invalid IP address ports). (Sara)

- Zlib:
  . Fixed bug #74240 (deflate_add can allocate too much memory). (Matt Bonneau)

16 Mar 2017, PHP 7.1.3

- Core:
  . Fixed bug #74157 (Segfault with nested generators). (Laruence)
  . Fixed bug #74164 (PHP hangs when an invalid value is dynamically passed to
    typehinted by-ref arg). (Laruence)
  . Fixed bug #74093 (Maximum execution time of n+2 seconds exceed not written
    in error_log). (Laruence)
  . Fixed bug #73989 (PHP 7.1 Segfaults within Symfony test suite).
    (Dmitry, Laruence)
  . Fixed bug #74084 (Out of bound read - zend_mm_alloc_small). (Laruence)
  . Fixed bug #73807 (Performance problem with processing large post request).
    (Nikita)
  . Fixed bug #73998 (array_key_exists fails on arrays created by
    get_object_vars). (mhagstrand)
  . Fixed bug #73954 (NAN check fails on Alpine Linux with musl). (Andrea)